--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@capacitor/android": "^4.7.1",
     "@capacitor/cli": "^4.7.1",
     "@capacitor/core": "^4.7.1",
+    "@capacitor/dialog": "^4.1.0",
     "@capacitor/ios": "^4.7.1",
+    "@capacitor/push-notifications": "^4.1.2",
     "core-js": "^3.6.5",
+    "firebase": "^8.10.1",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
-	"firebase": "^8.10.1"
+    "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.13",
