*HOWTO* add bus & Debug_DIsplay

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@capacitor/push-notifications": "^4.1.2",
     "core-js": "^3.6.5",
     "firebase": "^8.10.1",
+    "mitt": "^3.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
