@babel/eslint-parser (upgrade to)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Torchbearers",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "productName": "Torchbearers",
   "author": "TogApps",
   "description": "A richly strategic board game",
@@ -12,6 +12,7 @@
     "resources": "capacitor-resources -p android,ios"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.23.10",
     "@capacitor/android": "^4.7.1",
     "@capacitor/cli": "^4.7.1",
     "@capacitor/clipboard": "^4.1.0",
@@ -20,7 +21,7 @@
     "@capacitor/push-notifications": "^4.1.2",
     "@hugotomazi/capacitor-navigation-bar": "^2.0.1",
     "axios": "^1.3.5",
-    "capacitor-resources": "^2.0.5",
+    "capacitor-resources": "^1.2.1",
     "core-js": "^3.6.5",
     "firebase": "^8.10.1",
     "jquery": "^3.7.0",
@@ -29,14 +30,14 @@
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
-    "@capacitor/assets": "^2.0.4",
-    "@vue/cli-plugin-babel": "~4.5.13",
-    "@vue/cli-plugin-eslint": "~4.5.13",
-    "@vue/cli-plugin-router": "~4.5.13",
-    "@vue/cli-service": "~4.5.13",
+    "@capacitor/assets": "^3.0.4",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-plugin-router": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
+    "eslint": "^8.57.0",
     "eslint-plugin-vue": "^7.0.0"
   },
   "eslintConfig": {
@@ -49,7 +50,7 @@
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "@babel/eslint-parser"
     },
     "rules": {
       "vue/multi-word-component-names": "off",
